got a hang on these css things: remove table align attribute for political correctness

--- a/public/sprinkler.css
+++ b/public/sprinkler.css
@@ -4,11 +4,16 @@
 .sprkrbuttons {
    font-family:'Metrophobic', sans-serif;
    text-align: right;
-   float: right}
+   width: 50%;
+   display: inline-table;
+   float: right
+}
 .sprkrmenu {
    font-family:'Metrophobic', sans-serif;
    text-align: right;
    color: blue;
+   width: 50%;
+   display: inline-table;
    float: right
 }
 .sprkrmenucell {text-align: right}
@@ -21,6 +26,8 @@
 .sprkrstatus {
    font-family: 'Metrophobic', sans-serif;
    text-align: left;
+   width: 50%;
+   display: inline-table;
    float: left
 }
 .sprkrdata {
@@ -29,7 +36,7 @@
    font-size: 20px;
    color: darkgreen
 }
-.sprkevent {font-family: 'Metrophobic', sans-serif; text-align: left}
+.sprkrevent {font-family: 'Metrophobic', sans-serif; text-align: left}
 
 body {background-color: '#F5F5F5'}
 h1 {
@@ -43,7 +50,7 @@ button {
    font-size: 16px;
    text-align: right;
    text-decoration: none;
-   width: 200px;
+   width: 100%;
    height: 40px;
    border-top-left-radius: 18px;
    border-bottom-left-radius: 18px;
